# retico-rfdetr

./: .gitignore  README.md  hfrunner.py  pyproject.toml  runner.py
retico_rfdetr/: __init__.py  hfrfdetr.py  rfdetr.py
retico_rfdetr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
