[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "retico-rfdetr"
dynamic = ["version"]
dependencies = [
    "retico-core>=2.0.0",
    "retico-vision",
    "rfdetr",
    "transformers",
    "supervision",
    "opencv-python",
    "torch",
]
requires-python = ">=3.10"
authors = [
    {name = "Dalton Bilau Goncalves", email= "daltonbilaugoncalves@gmail.com"},
]
description = "A Retico module for Roboflow's Detection Transformer."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "real-time",
    "Roboflow",
    "object-detection",
    "Transformer"
]
